[project]
name = "qwen-reranker"
version = "0.1.0"
description = "Qwen Reranker for document chunks using Qwen LLM model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",          # ignore virtual env
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # E,F = errors, I = isort (imports), UP = pyupgrade
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["qwen_reranker"]
log_cli = true
log_level = "INFO"
